fix(prompts): Fix default prompt order, fix page component column overflow

--- a/desktop/workspaces/angular-app/src/app/components/page/page.component.scss
+++ b/desktop/workspaces/angular-app/src/app/components/page/page.component.scss
@@ -2,8 +2,9 @@
 	display: flex;
 }
 
-.column,
-.main-content {
+.column {
+	height: 100vh;
+	overflow-y: scroll;
 }
 
 /** On desktop we have at least one column on the left - the icon menu bar
